--- a/index.html
+++ b/index.html
@@ -1,118 +1,205 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>NЁRDS</title>
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700&nbsp;subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
     <div class="container clearfix">
-      <figure class="main-logo">
-        <img src="img/main-logo.png" width="139" height="56" alt="Main-Logo">
-      </figure>
-      <div class="main-cart">
-        <a href="#">Корзина</a>
-      </div>
-      <nav class="main-navigation">
-        <ul>
-          <li><a href="#">Студия</a></li>
-          <li><a href="#">Клиенты</a></li>
-          <li><a href="#">Магазин</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
-      <section class="main-slider">
-        <div class="main-slide">
-          slider
+
+      <div class="main-header__top-wrapper">
+        <a class="main-header__logo" href="index.html">
+          <img src="img/main-logo.png" width="139" height="56" alt="Main-Logo">
+        </a>
+        <nav class="main-nav">
+          <ul class="main-nav__list">
+            <li class="main-nav__list-item"><a href="#">Студия</a></li>
+            <li class="main-nav__list-item"><a href="#">Клиенты</a></li>
+            <li class="main-nav__list-item"><a href="catalog.html">Магазин</a></li>
+            <li class="main-nav__list-item"><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="main-header__cart">
+          <a href="#">Корзина</a>
         </div>
-      </section>
+      </div>
+
+      <div class="slider">
+        <input type="radio" name="toggle" id="btn-1" checked>
+        <input type="radio" name="toggle" id="btn-2">
+        <input type="radio" name="toggle" id="btn-3">
+        <div class="slider__controls">
+          <label class="slider__toggle" for="btn-1"></label>
+          <label class="slider__toggle" for="btn-2"></label>
+          <label class="slider__toggle" for="btn-3"></label>
+        </div>
+
+        <div class="slider__slides">
+          <div class="slider__slide slider__slide--hammers">
+            <div class="slider__text">
+              <h2 class="slider__title">
+                Долго, дорого,
+                скрупулезно.
+              </h2>
+              <p>
+                Математически выверенный дизайн
+                для вашего сайта или мобильного приложения.
+              </p>
+              <a class="slider__btn btn" href="#">Узнать больше</a>
+            </div>
+          </div>
+
+          <div class="slider__slide slider__slide--drills">
+            <div class="slider__text">
+              <h2 class="slider__title">
+                Любите ли вы математику,
+                как любим ее мы?
+              </h2>
+              <p>
+                Нашим дизайнерам мы удаляем нейроны, ответственные
+                за креатив, чтобы дать им возможность все просчитать
+              </p>
+              <a class="slider__btn btn" href="catalog.html">Узнать больше</a>
+            </div>
+          </div>
+
+          <div class="slider__slide slider__slide--drills">
+            <div class="slider__text">
+              <h2 class="slider__title">
+                Только наркотики,
+                только хардкор!
+              </h2>
+              <p>
+                Все дизайнерские решения в нашей компании принимаются только
+                под воздействием качественных галлюциногенов
+              </p>
+              <a class="slider__btn btn" href="catalog.html">Узнать больше</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </header>
-  <main class="container">
-    <section class="features-row">
-      <div class="features-item">
-        <figure class="item-image">
-          <img src="img/advertising-image-1.png" width="240" height="124" alt="item">
-        </figure>
-        <div class="features-title">
-          Веб-сайты
+
+  <div class="main">
+    <div class="container">
+      <div class="features-row">
+        <div class="features-item">
+          <div class="features-item__title">
+            Веб-сайты
+          </div>
+          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <a class="btn features-item__btn" href="#">Заказать</a>
         </div>
-        <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-        <div class="btn">
-          <a href="#">Заказать</a>
+        <div class="features-item">
+          <div class="features-item__title">
+            Приложения
+          </div>
+          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <a class="btn  features-item__btn" href="#">Заказать</a>
         </div>
-      </div>
-      <div class="features-item">
-        <figure class="item-image">
-          <img src="img/advertising-image-2.png" width="240" height="124" alt="item">
-        </figure>
-        <div class="features-title">
-          Приложения
-        </div>
-        <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-        <div class="btn">
-          <a href="#">Заказать</a>
-        </div>
-      </div>
-      <div class="content-item">
-        <figure class="content-item-image">
-          <img src="img/advertising-image-3.png" width="240" height="124" alt="item">
-        </figure>
-        <div class="content-title">
-          Презентации
-        </div>
-        <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-        <div class="btn">
-          <a href="#">Заказать</a>
+        <div class="features-item">
+          <div class="features-item__title">
+            Презентации
+          </div>
+          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+          <a class="btn features-item__btn" href="#">Заказать</a>
         </div>
       </div>
-    </section>
-    <div class="about-us">
-      <div class="features-column-left">
-        <h2 class="column-title">Мы -маленькая, но гордая дизайн-студия из Краснодара.</h2>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет выше креатива. Работаем не покладая рук, как роботы.</p>
-        <div class="features-title">
-          Выполняем заказы на разработку:
+      <hr>
+      <div class="about-us">
+        <div class="about-us__column-left">
+          <h2 class="about-us__title">Мы -маленькая, но гордая дизайн-студия из Краснодара.</h2>
+          <p>
+            Исповедуем принципы минимализма и чистоты. Ставим математический
+            расчет выше креатива. Работаем не покладая рук, как роботы.
+          </p>
+          <div class="about-us__title">
+            Выполняем заказы на разработку:
+          </div>
+          <ul class="about-us__list">
+            <li class="about-us__list-item">Веб-сайтов любой сложности</li>
+            <li class="about-us__list-item">Мобильных приложений для iOS и Android</li>
+            <li class="about-us__list-item">Слайдщоу и видео для корпоративных презентаций</li>
+          </ul>
         </div>
-        <ul>
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для iOS и Android</li>
-          <li>Слайдщоу и видео для корпоративных презентаций</li>
-        </ul>
-      </div>
-      <div class="features-column-right">
-        <figure class="features-logo"><img src="img/logo-since.png" width="240" height="119" alt="Nerds"></figure>
-        <div class="features-title">
-          Как мы работаем:
+        <div class="about-us__column-right">
+          <a class="about-us__logo" href="#"><img src="img/img_logo-since.png" width="240" height="119" alt="Nerds"></a>
+          <div class="features-title">
+            Как мы работаем:
+          </div>
+          <ul>
+            <li class="about-us__list-item">С самоотдачей 146%</li>
+            <li class="about-us__list-item">Соблюдая сроки на 100%</li>
+            <li class="about-us__list-item">По предоплате 50%</li>
+          </ul>
         </div>
-        <ul>
-          <li>С самоотдачей 146%</li>
-          <li>Соблюдая сроки на 100%</li>
-          <li>По предоплате 50%</li>
-        </ul>
       </div>
+      <hr>
+      <div class="partners">
+        <a class="partners__item" href="#"><img src="img/img_partners-logo-glukhanko.png" width="198" height="37" alt="Glukhanko"></a>
+        <a class="partners__item" href="#"><img src="img/img_partners-logo-htmlacademy.png" width="199" height="50" alt="HtmlAcademy"></a>
+        <a class="partners__item" href="#"><img src="img/img_partners-logo-borodinski.png" width="209" height="116" alt="Borodinski"></a>
+      </div>
+      <hr>
     </div>
-    <section class="partners">
-      <article class="partner-item"><img src="#" width="100" height="100" alt="Glukhanko"></article>
-      <article class="partner-item"><img src="#" width="100" height="100" alt="HtmlAcademy"></article>
-      <article class="partner-item"><img src="#" width="100" height="100" alt="Borodinski"></article>
-    </section>
-    <article class="main-map"><img src="#" width="1000" height="500" alt="Map"></article>
-  </main>
+    <div class="map" href="#">
+      <div class="map__contact">
+        <div class="map__title">
+          NЁRDS DESIGN STUDIO
+        </div>
+        <p>
+          191186, Санкт-Петербург,
+          ул. Б. Конюшенная, д. 19/8
+        </p>
+        <p>тел. +7 (812) 275-75-75</p>
+        <a class="btn  map__btn" href="#">Напишите нам</a>
+      </div>
+      <div class="map__marker"></div>
+    </div>
+  </div>
+
+
   <footer class="main-footer">
-    <div class="container clearfix">
-      <section class="footer-social">
-        <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
-        <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
-        <a href="#" class="social-btn social-btn-inst">Инстаграм</a>
-      </section>
-      <section class="footer-titles">
-        <h2 class="footer-title">Давайте дружить,это выгодно!</h2>
+    <div class="container">
+      <div class="social">
+        <a href="#" class="social__btn  social__btn--vk">Вконтакте</a>
+        <a href="#" class="social__btn  social__btn--fb">Фейсбук</a>
+        <a href="#" class="social__btn  social__btn--inst">Инстаграм</a>
+      </div>
+      <div class="main-footer__titles">
+        <div class="main-footer__title">Давайте дружить,это выгодно!</div>
         <p>Скидка 10% для друзей из социальных сетей</p>
-      </section>
+      </div>
     </div>
   </footer>
+
+  <ariticle class="write-us">
+    <div class="write-us__close"></div>
+    <form class="write-us__form" action="/echo" method="post">
+      <div class="write-us__items">
+        <div class="write-us__item  write-us__item--name">
+          <label for="name">Ваше имя:</label>
+          <input type="text" name="name" id="name"  placeholder="Представьтесь, пожалуйста">
+        </div>
+        <div class="write-us__item  write-us__item--email">
+          <label for="email">Ваш e-mail:</label>
+          <input type="text" name="email" id="email"  placeholder="Для отправки ответа">
+        </div>
+        <div class="write-us__item  write-us__item--textarea">
+          <label for="textarea">Текст письма:</label>
+          <textarea id="textarea"  placeholder="В свободной форме"></textarea>
+        </div>
+      </div>
+      <div class="write-us__buttons">
+        <input class="btn  write-us__btn  write-us__btn--send" type="submit" name="send" id="send" value="Отправить">
+        <input class="btn  write-us__btn  write-us__btn--reset" type="reset" name="reset" id="reset" value="Отмена">
+      </div>
+    </form>
+  </ariticle>
 </body>
 </html>
