--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>NЁRDS</title>
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700&nbsp;subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500,700&nbsp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <header class="main-header">
-    <div class="container clearfix">
+    <div class="container  clearfix">
 
-      <div class="main-header__top-wrapper">
+      <div class="main-header__top-wrapper  clearfix">
         <a class="main-header__logo" href="index.html">
           <img src="img/main-logo.png" width="139" height="56" alt="Main-Logo">
         </a>
+        <div class="main-header__cart">
+          <a href="#">Корзина</a>
+        </div>
         <nav class="main-nav">
           <ul class="main-nav__list">
             <li class="main-nav__list-item"><a href="#">Студия</a></li>
@@ -22,23 +26,20 @@
             <li class="main-nav__list-item"><a href="#">Контакты</a></li>
           </ul>
         </nav>
-        <div class="main-header__cart">
-          <a href="#">Корзина</a>
-        </div>
       </div>
 
       <div class="slider">
-        <input type="radio" name="toggle" id="btn-1" checked>
-        <input type="radio" name="toggle" id="btn-2">
-        <input type="radio" name="toggle" id="btn-3">
+        <input type="radio" name="toggle" id="toggle-1" checked>
+        <input type="radio" name="toggle" id="toggle-2">
+        <input type="radio" name="toggle" id="toggle-3">
         <div class="slider__controls">
-          <label class="slider__toggle" for="btn-1"></label>
-          <label class="slider__toggle" for="btn-2"></label>
-          <label class="slider__toggle" for="btn-3"></label>
+          <label class="slider__toggle" for="toggle-1"></label>
+          <label class="slider__toggle" for="toggle-2"></label>
+          <label class="slider__toggle" for="toggle-3"></label>
         </div>
 
         <div class="slider__slides">
-          <div class="slider__slide slider__slide--hammers">
+          <div class="slider__slide slider__slide--1">
             <div class="slider__text">
               <h2 class="slider__title">
                 Долго, дорого,
@@ -52,7 +53,7 @@
             </div>
           </div>
 
-          <div class="slider__slide slider__slide--drills">
+          <div class="slider__slide slider__slide--2">
             <div class="slider__text">
               <h2 class="slider__title">
                 Любите ли вы математику,
@@ -66,7 +67,7 @@
             </div>
           </div>
 
-          <div class="slider__slide slider__slide--drills">
+          <div class="slider__slide slider__slide--3">
             <div class="slider__text">
               <h2 class="slider__title">
                 Только наркотики,
@@ -86,23 +87,23 @@
   </header>
 
   <div class="main">
-    <div class="container">
+    <div class="main__container container">
       <div class="features-row">
-        <div class="features-item">
+        <div class="features-item features-item--bg-web">
           <div class="features-item__title">
             Веб-сайты
           </div>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a class="btn features-item__btn" href="#">Заказать</a>
         </div>
-        <div class="features-item">
+        <div class="features-item features-item--bg-app">
           <div class="features-item__title">
             Приложения
           </div>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a class="btn  features-item__btn" href="#">Заказать</a>
         </div>
-        <div class="features-item">
+        <div class="features-item features-item--bg-presentation">
           <div class="features-item__title">
             Презентации
           </div>
@@ -111,7 +112,7 @@
         </div>
       </div>
       <hr>
-      <div class="about-us">
+      <div class="about-us clearfix">
         <div class="about-us__column-left">
           <h2 class="about-us__title">Мы -маленькая, но гордая дизайн-студия из Краснодара.</h2>
           <p>
@@ -128,7 +129,7 @@
           </ul>
         </div>
         <div class="about-us__column-right">
-          <a class="about-us__logo" href="#"><img src="img/img_logo-since.png" width="240" height="119" alt="Nerds"></a>
+          <a class="about-us__logo" href="#"><img src="img/img_logo-since.png" height="119" width="240" alt="Nerds"></a>
           <div class="features-title">
             Как мы работаем:
           </div>
@@ -148,16 +149,18 @@
       <hr>
     </div>
     <div class="map" href="#">
-      <div class="map__contact">
-        <div class="map__title">
-          NЁRDS DESIGN STUDIO
+      <div class="container">
+        <div class="map__contact">
+          <div class="map__title">
+            NЁRDS DESIGN STUDIO
+          </div>
+          <p>
+            191186, Санкт-Петербург,
+            ул. Б. Конюшенная, д. 19/8
+          </p>
+          <p>тел. +7 (812) 275-75-75</p>
+          <a class="btn  map__btn" href="#">Напишите нам</a>
         </div>
-        <p>
-          191186, Санкт-Петербург,
-          ул. Б. Конюшенная, д. 19/8
-        </p>
-        <p>тел. +7 (812) 275-75-75</p>
-        <a class="btn  map__btn" href="#">Напишите нам</a>
       </div>
       <div class="map__marker"></div>
     </div>
@@ -165,7 +168,7 @@
 
 
   <footer class="main-footer">
-    <div class="container">
+    <div class="container clearfix">
       <div class="social">
         <a href="#" class="social__btn  social__btn--vk">Вконтакте</a>
         <a href="#" class="social__btn  social__btn--fb">Фейсбук</a>
